implement player camera zoom and edge pan

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,4 +6,8 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/MainMap.MainMap
+GameDefaultMap=/Game/Maps/MainMap.MainMap
+GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 
