dynamic mesh and add towers

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,6 @@ EditorStartupMap=/Game/Maps/MainMap.MainMap
 GameDefaultMap=/Game/Maps/MainMap.MainMap
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 
+[/Script/Engine.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
