added start screen and instruction screen with working buttons

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,11 +6,21 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/MainMap.MainMap
-GameDefaultMap=/Game/Maps/MainMap.MainMap
-GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
-
 [/Script/Engine.RecastNavMesh]
 RuntimeGeneration=Dynamic
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/MainMap.MainMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/MainMap.MainMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
+GlobalDefaultServerGameMode=None
+
 
