Changed start and game over screens

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,9 +18,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/MainMap.MainMap
+GameDefaultMap=/Game/Maps/Start_Screen.Start_Screen
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
-
 
