cursor and winscreen

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,3 +23,6 @@ ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
+[/Script/Engine.UserInterfaceSettings]
+DefaultCursor=/Game/UI/BP_CursorDefault.BP_CursorDefault_C
+
